src/objects/Rehab_Project__c.object
<CustomObject>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacant_Rental_Units__c</fullName>
        <label>Vacant Rental Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <description>Is the Owner of this property a Veteran?</description>
        <inlineHelpText>Is the Owner of this property a Veteran?</inlineHelpText>
        <label>Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walk_Through__c</fullName>
        <label>Walk Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip +4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Rehab Project</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Owner_1_Last_Name__c</columns>
        <columns>Owner_1_First_Name__c</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_1__c</columns>
        <columns>Owner_1_Last_Name__c</columns>
        <columns>Owner_1_First_Name__c</columns>
        <columns>APN__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rehab Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APN_Format</fullName>
        <active>true</active>
        <description>Formats the APN number</description>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(APN__c), 
REGEX( APN__c , &quot;[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>APN__c</errorDisplayField>
        <errorMessage>The APN number must be in the form of ###-###-##-##</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_1_SSN_Formatting</fullName>
        <active>true</active>
        <description>Requires the dashes in a SSN</description>
        <errorConditionFormula>if(!ISBLANK(Owner_1_SSN__c) &amp;&amp; !ISNULL(Owner_1_SSN__c),NOT( REGEX( Owner_1_SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot; )),false)</errorConditionFormula>
        <errorDisplayField>Owner_1_SSN__c</errorDisplayField>
        <errorMessage>SSN must be ###-##-####</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_2_SSN_Formatting</fullName>
        <active>true</active>
        <description>Requires the dashes in a SSN</description>
        <errorConditionFormula>if(!ISBLANK(Owner_2_SSN__c) &amp;&amp; !ISNULL(Owner_2_SSN__c),NOT( REGEX( Owner_2_SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot; )),false)</errorConditionFormula>
        <errorDisplayField>Owner_2_SSN__c</errorDisplayField>
        <errorMessage>SSN must be ###-##-####</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_Case_Name</fullName>
        <active>true</active>
        <description>Makes sure that 2 cases with the same number do not exist</description>
        <errorConditionFormula>Name == VLOOKUP(
    $ObjectType.Rehab_Project__c.Fields.Name,
    $ObjectType.Rehab_Project__c.Fields.Name,
    Name
)
&amp;&amp;
Id &lt;&gt; VLOOKUP(
    $ObjectType.Rehab_Project__c.Fields.Id,
    $ObjectType.Rehab_Project__c.Fields.Name,
    Name
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>There is already a project using that case number.</errorMessage>
    </validationRules>
</CustomObject>